# scenic

./: .gitignore  AUTHORS  BUGS  ChangeLog  Makefile  Makefile.am  NEWS  README  RELEASE  TODO  acinclude.m4  autogen.sh  cam.c  cam.py  configure.ac  configure.in  globals.mak  scenic.pc.in  shared-video.pc.in  videoSize.h
doc/: Doxyfile  Doxyfile.in  Makefile  Makefile.am  conf.dia  connection_state.dia  daemons.dia  devices-handling.dia  devices_sequence.dia  doxygen.css  engines.dia  events_flow.txt  footer.html  hdv.txt  header.html  jackd.dot  latency.txt  mockup.odg  network_classes.dia  network_sequence.dia  notes.txt  pycore_flow_v1.dia  pycore_v1.dia  resettings_class.dia  service.dia  settings_flow.dia  sic_race_conditions.odg  sipPart.dia  state_machine.dia  state_machine3.dia  telnet-interface.txt  test_checklist.csv  test_checklist.ods  testing.dia
doc/classes/: proto_conf.dia  proto_conf_v3.dia  refactor_engines.dia  refactor_services.dia  refactor_v02_conf_services.dia  resettings_class.dia
doc/devices/: Makefile  network_sequence.txt
doc/docbook/: Makefile.am  glossary.xml  inst-cmd.xml  inst-intro.xml  installation-manual.xml  installation-manual.xml.in  makehtml  scenic-installation-manual.xml  scenic-user-manual.xml  user-manual.xml  user-manual.xml.in
doc/figures/: Makefile  devices-handling.dia  distributed_system_telnet_two-way.dia  jackd.dot  may27_state_machine.dia  pycore_flow_v1.dia  pycore_v1.dia  state_machine.dia  state_machine2.dia  state_machine_redux.dia  telnet_state_machine.dia
doc/network/: Makefile  network_sequence.msc  network_states.dot
doc/notes/: Makefile  miville-milhouse.txt  python_renaming.txt  refactor_settings.txt
doc/sequences/: Makefile.am  session.msc  streams_init.msc  streams_start.msc
doc/states/: session_streams.ods  v01_network_testing_states.dia
doc/test/: Makefile
doc/texts/: Makefile.am  rfc1.rst  ssip.txt  todo_miville.txt
man/: Makefile.am  dc-ctl-man.txt  dc-ctl.1  firereset-man.txt  jack-info-man.txt  midistream-man.txt  milhouse-man.txt  scenic-man.txt
public/: autogen.sh  configure.ac
public/doc/: Doxyfile  pycore_v1.dia  sipPart.dia
public/gst-jack/: config.h.in  configure
public/py/: addressbook.py  miville.py  protocols  settings.py
public/src/: Makefile.am  globals.mak  headerGPL.c
public/utils/: uncrustify.cfg  uncrustify2.cfg
py/: .coverage  BASIC.py  CONN.py  MANPAGE.txt  Makefile  Makefile.am  README  __init__.py  addressbook.py  api.py  core.py  errors.py  imiville.py  midistream  miville  miville-wrapper  miville.desktop  miville.py  miville.sh  mivilled  network.py  parasite_scenic.sh  restart_jackd.py  run  run-fr  run_midi  scenic.desktop  settings.py  settings.sets  setup.py  setup.py.in  test_addressbook.py  trial.py
py/connections/: __init__.py  basic.py  com_chan.py
py/connectors/: __init__.py  states.py
py/covy/: miville.py,cover
py/debian/: copyright
py/devices/: Device.py  Driver.py  __init__.py  devices.py  firewire.py  firewire_bus_reset.py  jackd.py  start_jackd.py  v4l.py  v4l2.py
py/doc/: Makefile.am
py/docs/: Makefile  Makefile.am  addressbook.txt  api.txt  conf.py  connectors.basic.txt  connectors.sip.txt  core.txt  devices.txt  docs.txt  doxyville  engines.txt  events_controllers.txt  generate_modules.py  imiville.txt  index.txt  javascript.txt  js_addressbook.txt  js_utils.txt  modules.txt  network.txt  protocols.txt  streams.txt  test_coverage.txt  ui.cli.txt  ui.txt  ui.web.txt  ui.web.widgets.medias.txt  ui.web.widgets.txt  utils.txt
py/engines/: __init__.py  audiovideogst.py  base_gst.py  gstchannel.py
py/maugis/: Makefile  Makefile.am  Makefile.old  gobject_spawn_async.py  maugis.desktop  maugis.glade  maugis.pot  maugis.py  maugis.sh  pystd.py  run  scenic.desktop  setup.py  sic
py/midi/: midi.py  midiIn.py  midiObject.py
py/miville/: Makefile.am  __init__.py  addressbook.py  api.py  core.py  errors.py  interfaces.py  network.py  options.py  presets.txt  presets.txt.testsources  presets.txt.v4ltestsrc  runner.py  runner.py.in  settings.py
py/net/: cleanNet.sh  trashNet.sh
py/prism/: Makefile.am  localstore.json  prism-miville  webapp.ini
py/protocols/: __init__.py  com_chan.py  com_chan_dialogs.py  ipcp.py  ipcp_server.py  osc_protocol.py  pinger.py  test_osc_client.py  test_osc_server.py
py/rtpmidi/: Makefile.am  midi_stream.py  runner.py  utils.py
py/scenic/: Makefile.am  application.py  communication.py  configure.py.in  dialogs.py  glade.py  gstreamer.py  gui.py  internationalization.py  logger.py  network.py  ports.py  preview.py  process.py  runner.py  saving.py  sic.py  sig.py  streamer.py  twistedbackports.py
py/scripts/: Makefile.am  midistream.in  scenic  scenic.in
py/streams/: __init__.py  gst_client.py  stream.py
py/test/: 8_chan_multi_codec_settings.py  8_chan_multi_codec_settings_videotestsrc.py  NOMENCLATURE.txt  README  README_steps_towards_working_tests.txt  __init__.py  bidi_video_telnet_test.py  check_cli_streams.py  check_cli_ui.py  check_devices.py  check_devices_settings.py  check_milhouse_ipcp.py  check_milhouse_ipcp_sync.py  check_miville_settings.py  check_miville_starts.py  check_ping.py  check_telnet_thrillhouse.py  check_web_streams.py  config_test.sh  dist_bidi_ALL.py  dist_bidi_AV.py  dist_bidi_audio.py  dist_bidi_video.py  dist_dualtest_network.py  dist_dualtest_ping.py  dist_selenium_streams.py  dist_tc1_tx.py  dist_telnet_sys_test1.py  dist_telnet_sys_test2.py  dist_telnet_sys_test3.py  dist_telnet_sys_test4.py  dist_telnet_sys_test5_WIP.py  dist_telnet_sys_test6_WIP.py  dualtest_network.py  dualtest_ping.py  itest_devices.py  lib_clientserver.py  lib_deprecated_miville_telnet.py  lib_milhouse_ipcp.py  lib_miville_telnet.py  (+53 more)
py/ui/: __init__.py  api.py  common.py
py/utils/: __init__.py  commands.py  common.py  coverage_report.py  log.py  mediator.py  observer.py  shell.py  singleton.py  system_settings.py  telnet_testing.py  twisted_old.py
src/: MANPAGE.txt  Makefile.am  base.mak  config.h.in  globals.mak  headerGPL.c  headerLGPL.c  python_import.cpp
src/args/: optionArgs.cpp
(+1968 files in other folders)
